--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <h3>Subscribe to my newsletter</h3>
                     <img class="newsletter_icon" src="img/newsletter.png">
                         <div class="newsletter_form"><form-action="#" method="post"></div>
-                    <p>E-mail: <input class="input_text" type="text" name="email"/>
+                    <p>E-mail: <input class="input_text" type="email" name="email"/>
                     <input class="submit_button" type="submit" value="Submit"/></p>
                     </div>
                 </div>
