newsletter languages added - radio

--- a/index.html
+++ b/index.html
@@ -78,8 +78,18 @@
                     <h3>Subscribe to my newsletter</h3>
                     <img class="newsletter_icon" src="img/newsletter.png">
                         <div class="newsletter_form"><form-action="#" method="post"></div>
-                    <p>E-mail: <input class="input_text" type="email" name="email"/>
-                    <input class="submit_button" type="submit" value="Submit"/></p>
+                        <p>E-mail: <input class="input_text" type="email" name="email"/></p>
+        <p>Language:</p>
+        <label for="language">EN</label>
+        <input type="radio" name="language" value="en"/>
+        <label for="language">DE</label>
+        <input type="radio" name="language" value="de"/>
+        <label for="language">RU</label>
+        <input type="radio" name="language" value="ru"/>
+        <label for="language">PL</label>
+        <input type="radio" name="language" value="pl"/>
+        <br>                        
+                    <input class="submit_button" type="submit" value="Submit"/>
                     </div>
                 </div>
             </div>
