tiny markup order change

--- a/index.html
+++ b/index.html
@@ -80,15 +80,11 @@
                         <div class="newsletter_form"><form-action="#" method="post"></div>
                         <p>E-mail: <input class="input_text" type="email" name="email"/></p>
         <p>Language:</p>
-        <label for="language">EN</label>
-        <input type="radio" name="language" value="en"/>
-        <label for="language">DE</label>
-        <input type="radio" name="language" value="de"/>
-        <label for="language">RU</label>
-        <input type="radio" name="language" value="ru"/>
-        <label for="language">PL</label>
-        <input type="radio" name="language" value="pl"/>
-        <br>                        
+        <input type="radio" name="language" value="en"/><label for="language">EN</label>
+        <input type="radio" name="language" value="de"/><label for="language">DE</label>
+        <input type="radio" name="language" value="ru"/><label for="language">RU</label>
+        <input type="radio" name="language" value="pl"/><label for="language">PL</label>
+        <br>                      
                     <input class="submit_button" type="submit" value="Submit"/>
                     </div>
                 </div>
