--- a/contact.html
+++ b/contact.html
@@ -29,8 +29,8 @@
                     <button class="dropbtn">Courses</button>
                     <i class="fa fa-caret-down"></i>
                         <div class="dropdown-content">
-                        <a href="#">Course1</a>
-                        <a href="#">Course2</a>
+                        <a href="course1.html">Course1</a>
+                        <a href="course2.html">Course2</a>
                         <a href="#">Course3</a>
                         </div>
                     </div>
