--- a/course1.html
+++ b/course1.html
@@ -71,7 +71,9 @@
     <div class="row">
         <div class="maintext">
             <h2 class="uppercase">Why this box?</h2>
-            <div class="coursebox uppercase"> because it's magic </div>         
+            <div class="coursebox uppercase"> because it's magic </div>  
+            <div class="flyme">
+             </div>
         </div>
 
         <div class="whoamibox">  
