--- a/course2.html
+++ b/course2.html
@@ -46,11 +46,9 @@
                                     </table>
                                 </div>
 		<!-- contact box end -->
-
 <!-- GO TO TOP, NOT YET NEEDED
     <a id="top"></a> 
 -->                
-               
 <br>
 <br>
 <br>
@@ -62,8 +60,7 @@
              </div>
         </div>
      -->
-<div>
-
+<div  class="course2block">
     <div>
         <h1> Course2 - Background Miracle</h1>
     </div>
@@ -74,7 +71,7 @@
             <div>
         <p class="uppercase">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque tortor sed accumsan convallis.</p>
         <p class="lowercase">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio.</p>
-        <p>Image by <a href="https://pixabay.com/users/Rudimaes-12113722/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=4706963">Rudi Maes</a> from <a href="https://pixabay.com/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=4706963">Pixabay</a></p>
+        <p class="links">Image by <a href="https://pixabay.com/users/Rudimaes-12113722/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=4706963">Rudi Maes</a> from <a href="https://pixabay.com/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=4706963">Pixabay</a></p>
             </div>         
         </div>
 
