--- a/course1.html
+++ b/course1.html
@@ -15,7 +15,7 @@
 	  <div align="left">
             <div class="navbar">
             <a href="index.html">Home</a>
-            <a href="#news">News</a>
+            <a href="news.html">News</a>
                 <div class="dropdown">
                 <button class="dropbtn">Services</button>
                 <i class="fa fa-caret-down"></i>
@@ -58,7 +58,7 @@
      
         <div>
             <div class="banner">
-            <a href="https://google.com" target="blank"><img src="img/banner_kupwincyj.jpg" alt="kupwincyj"/></a>
+            <a href="https://github.com/IriW/HTML_CSS_Playground" target="blank"><img src="img/banner_kupwincyj.jpg" alt="kupwincyj"/></a>
              </div>
         </div>
      -->
