--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
 	  <div align="left">
             <div class="navbar">
             <a href="index.html">Home</a>
-            <a href="#news">News</a>
+            <a href="news.html">News</a>
                 <div class="dropdown">
                 <button class="dropbtn">Services</button>
                 <i class="fa fa-caret-down"></i>
