--- a/news.html
+++ b/news.html
@@ -10,6 +10,7 @@
         <meta name="keywords" content="fancy, content">
         <link href="https://fonts.googleapis.com/css?family=Lato:200,400|Prata" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="style.css"/>
+        <script src="js/prefixfree.min.js" type="application/javascript"></script>
      </head>
 	<body>
 	  <div align="left">
@@ -66,12 +67,12 @@
         <div class="maintext">
         <h2 class="uppercase">1st Animation added</h2>
         <pre>2019-12-28</pre>
-        <p>Check out my new (actually first) <a href="course1.html"  target="blank" style="text-decoration:none; color: green; font-weight: bold;">animation</a>!<br>Ugly? No, it's not :P </p>
+        <p>Check out my new (actually first) <a href="course1.html"  target="blank" style="text-decoration:none; color: green; font-weight: bold;">animation</a>!<br>Ugly? No, it's not &#128125 </p>
         <br>
         <br>
-        <h2 class="uppercase">3D animation in progress </h2>
-        <p>Coming soon. I'll keep you updated!</p>
-        <p></p>
+        <h2 class="uppercase">3D animation - my fav names cube </h2>
+        <pre>2019-12-28</pre>
+        <p>I'ts ready to admire! The "Names Cube" can be found on the <a href="index.html"  target="blank" style="text-decoration:none; color: green; font-weight: bold;">home page</a>. </p>
         
         </div>
         
