--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
         <meta name="keywords" content="fancy, content">
         <link href="https://fonts.googleapis.com/css?family=Lato:200,400|Prata" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="style.css"/>
+        <script src="js/prefixfree.min.js" type="application/javascript"></script>
      </head>
 	<body>
 	  <div align="left">
             <div class="navbar">
             <a href="index.html">Home</a>
-            <a href="#news">News</a>
+            <a href="news.html">News</a>
                 <div class="dropdown">
                 <button class="dropbtn">Services</button>
                 <i class="fa fa-caret-down"></i>
@@ -53,7 +54,7 @@
 <br>
         <div>
             <div class="banner">
-            <a href="https://google.com" target="blank"><img src="img/banner_kupwincyj.jpg" alt="kupwincyj"/></a>
+            <a href="https://github.com/IriW/HTML_CSS_Playground" target="blank"><img src="img/banner_kupwincyj.jpg" alt="kupwincyj"/></a>
              </div>
         </div>
 <div>
@@ -64,7 +65,19 @@
 <br>
     <div class="row">
         <div class="maintext">
-            <h2 class="uppercase">Hello Bebe</h2>
+            <h2 class="uppercase">hi there</h2>
+        <div id='scene'>
+            <div id='cube'>
+                <div class="side front">LAURA</div>
+                <div class="side back">ANASTASIA</div>
+                <div class="side left">ERIKA</div>
+                <div class="side right">EDITH</div>
+                <div class="side top">LANA</div>
+                <div class="side bottom">MARILYN</div>
+            </div>
+            
+        </div>
+    </body>    
         <p class="capitalize">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque tortor sed accumsan convallis.</p>
         <p class="lowercase">Lorem ipsum dolooooor cambio dolooooor por liberdad sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque tortor sed accumsan convallis.</p>
         <p class="lowercase">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio.</p>
